# paparazzi

./: .gitignore  .gitmodules  Makefile.ac
conf/: Makefile.omap  Makefile.pixhawk  Makefile.px4  Makefile.stm32-no_upload  conf.xml.tudelft  control_panel.xml  flash_modes.xml  messages.xml
conf/TUDELFT/: tudelft_conf.xml
conf/airframes/: ardrone2.xml  ardrone2_IC.xml  ardrone2_indi.xml  ardrone2_opticflow_hover.xml  ardrone2_optitrack.xml  ardrone2_raw.xml  ardrone2_raw_optitrack.xml  ardrone2_rawzhold.xml  ardrone2_wim.xml  bebop.xml
conf/airframes/TUDELFT/: kevin_bebop2_fixedwing.xml  tudelft_b1.xml  tudelft_bebop_indi.xml  tudelft_conf.xml  tudelft_cx10.xml  tudelft_f3d.xml  tudelft_iris_indi.xml  tudelft_iris_pid.xml  tudelft_mavtec5.xml  tudelft_robird.xml  tudelft_xvert.xml
conf/airframes/TUDelft/: conf.xml
conf/airframes/examples/: doosje_lisa_s.xml
conf/airframes/tudelft/: bebop2_indi.xml  cx10.xml  iris_indi.xml
conf/boards/: lisa_mxs_1.0.makefile  lisa_mxs_1.0_chibios.makefile  lisa_s_1.0.makefile  pixhawk_2.4.makefile  pixhawkio_2.4.makefile  px4fmu_2.4.makefile  px4io_2.4.makefile  stm32f37x_vortex_1.0_chibios.makefile
conf/firmwares/: test_progs.makefile
conf/flight_plans/: IC_AutoExperiment.xml  IC_AutoFixedStartExperiment.xml  IC_AutoLineExperiment.xml  IC_AutoMultiLineExperiment.xml  IC_experiment.xml  IC_experiment2.xml  baasjes_doos.xml  rotorcraft_basic_kevin.xml  rotorcraft_opticflow_static.xml  rotorcraft_optitrack.xml
conf/flight_plans/TUDELFT/: tudelft_delft_basic.xml
conf/flight_plans/tudelft/: delft_basic.xml  vision_landing.xml
conf/gcs/: bottom_settings.xml  horizontal.xml  left_col.xml
conf/joystick/: gold_simulator_g5g6g7.xml  hobbyking.xml  trainer_GoldSimulator_Aerofly.xml  trainer_GoldSimulator_G5G6G7.xml  trainer_aerofly.xml
conf/modules/: AutoHeading.xml  IC.xml  glide_wing_lock.xml  odroid_outback.xml  px4io_flash.xml  pxio_flash.xml  ram_logger.xml  slamdunk_udp.xml  spektrum_soft_bind.xml  vertxesc.xml  video_ardrone2.xml
conf/radios/: FrSky3dr.xml  T14SG_SBUS.xml
conf/settings/: rotorcraft_basic.xml
conf/settings/control/: doosje_guidance.xml  rotorcraft_guidance.xml
conf/telemetry/: default_ardrone.xml  default_rotorcraft.xml  default_rotorcraft_slow.xml
conf/userconf/tudelft/: conf.xml
sw/airborne/boards/: pixhawk_2.4.h  pixhawkio_2.4.h  px4fmu_2.4.h  px4io_2.4.h
sw/airborne/math/: pprz_trig_int.c
sw/airborne/mcu_periph/: i2c.h  uart.h
sw/airborne/modules/IC/IC_ext/drone/: .gitignore  CMakeLists.txt  copy.sh  distribtuion_buffer.xml  downloadvids.sh  getAll.sh  graph_buffer.xml  groundtruth_buffer.xml  initdrone.sh  transfer.sh  usexml.sh
sw/airborne/modules/IC/IC_ext/drone/duocamcalib/: D2.xml  M1.xml  M2.xml  P1.xml
sw/airborne/modules/IC/IC_ext/pc/: .gitignore  CMakeLists.txt  copy.sh  transferxml.sh
sw/airborne/modules/IC/IC_ext/pc/duocamcalib/: D1.xml  P2.xml  Q.xml  R1.xml  R2.xml
sw/airborne/peripherals/: lsm303dlhc_spi.c  mpu9250_i2c.h
sw/airborne/subsystems/: electrical.c  electrical.h  imu.c  imu.h  radio_control.c  radio_control.h  video.c  video.h
sw/ext/ardrone2_drivers/: ardrone2.py
sw/ext/ardrone2_video/: basescript.sh  generate_initvideoall.sh  initvideoall.sh  installvideo.sh
sw/ground_segment/cockpit/: gcs.ml
sw/ground_segment/tmtc/: aircraft.ml  messages.ml  server.ml
sw/ground_segment/video/: startvideo.sh
sw/tools/: find_vpaths.py  qt_project.py  qtc.creator.user_template
sw/tools/generators/: gen_aircraft.ml
sw/tools/parrot/: ardrone2.py
sw/tools/ram_logger/: CMakeLists.txt  import.m
sw/tools/ram_logger/src/: ramlogger.cpp
(+150 files in other folders)
